--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         </div>
       </section>
       <section id='ship-list'>
-        <button id='start'>Start</button>
+        <div id='start-reset'>
+          <button id='start'>Start</button>
+          <button id='reset'>Reset</button>
+        </div>
         <h2>Your Arsenal of Ships! Select a Boat and then Click on the Grid to Place.</h2>
         <div id='buttons'>
           <button class='ships' id='2-ship'>2</button>
