--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div class='grid' id='player-grid'></div>
         </div>
         <div id='separation'>
+          <div id='countdown'></div>
         </div>
         <div id='comp-grid-wrapper'>
           <div class= 'grid' id='comp-grid'></div>
