--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       </section>
 
       <section id='boards'>
-        <div id='player-grid-wrapper'>
+        <div class='border-wrappers' id='player-grid-wrapper'>
           <div class='grid' id='player-grid'></div>
         </div>
         <div id='separation'>
           <div id='countdown'></div>
         </div>
-        <div id='comp-grid-wrapper'>
+        <div class='border-wrappers' id='comp-grid-wrapper'>
           <div class= 'grid' id='comp-grid'></div>
         </div>
       </section>
