--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Isaac's Battleships</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="scripts/app.js"></script>
-    <link href="http://fonts.cdnfonts.com/css/jmh-typewriter-dry" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/jmh-typewriter-dry" rel="stylesheet">
   </head>
   <body>
     <header>
